--- a/TaskScheduler/Views/Account/Login.cshtml
+++ b/TaskScheduler/Views/Account/Login.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>@ViewBag.Title.</h2>
+<h3>@ViewBag.ErrorMessage</h3>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
