adding project description and changes to project model

--- a/TaskScheduler/Views/Projects/Delete.cshtml
+++ b/TaskScheduler/Views/Projects/Delete.cshtml
@@ -44,6 +44,13 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.projectDesc)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.projectDesc)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.status)
         </dt>
 
