--- a/TaskScheduler/Views/Projects/Create.cshtml
+++ b/TaskScheduler/Views/Projects/Create.cshtml
@@ -47,6 +47,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.projectDesc, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.projectDesc, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.projectDesc, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
@@ -65,3 +73,11 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+<script>
+    $(document).ready(function () {
+        $.noConflict();
+        $('#startDate').datepicker();
+        $('#endDate').datepicker();
+    });
+</script>
