--- a/TaskScheduler/Views/Projects/Edit.cshtml
+++ b/TaskScheduler/Views/Projects/Edit.cshtml
@@ -19,7 +19,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                @{
+                    if (ViewBag.Role == "Manager")
+                    {
+                        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                    }
+                    else
+                    {
+                        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                    }
+                }
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -27,7 +36,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.assignedTo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.assignedTo, new { htmlAttributes = new { @class = "form-control" } })
+                @{
+                    if (ViewBag.Role == "Manager")
+                    {
+                        @Html.EditorFor(model => model.assignedTo, new { htmlAttributes = new { @class = "form-control" } })
+                    }
+                    else
+                    {
+                        @Html.EditorFor(model => model.assignedTo, new { htmlAttributes = new { @class = "form-control" , @readOnly = "readOnly", @disabled = "disabled" } })
+                    }
+                }
                 @Html.ValidationMessageFor(model => model.assignedTo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +53,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.startDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.startDate, new { htmlAttributes = new { @class = "form-control" } })
+                @{
+                    if (ViewBag.Role == "Manager")
+                    {
+                        @Html.EditorFor(model => model.startDate, new { htmlAttributes = new { @class = "form-control" } })
+                    } 
+                    else
+                    {
+                        @Html.EditorFor(model => model.startDate, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                    }
+                }
                 @Html.ValidationMessageFor(model => model.startDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,10 +70,39 @@
         <div class="form-group">
             @Html.LabelFor(model => model.endDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.endDate, new { htmlAttributes = new { @class = "form-control" } })
+                @{
+                    if (ViewBag.Role == "Manager")
+                    {
+                        @Html.EditorFor(model => model.endDate, new { htmlAttributes = new { @class = "form-control" } })
+                    }
+                    else
+                    {
+                        @Html.EditorFor(model => model.endDate, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                    }
+                }
+                
                 @Html.ValidationMessageFor(model => model.endDate, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.projectDesc, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @{
+                    if (ViewBag.Role == "Manager")
+                    {
+                        @Html.EditorFor(model => model.projectDesc, new { htmlAttributes = new { @class = "form-control" } })
+                    }
+                    else
+                    {
+                        @Html.EditorFor(model => model.projectDesc, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                    }
+                }
+
+                @Html.ValidationMessageFor(model => model.projectDesc, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -67,3 +123,11 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.noConflict();
+        $("#startDate").datepicker();
+        $("#endDate").datepicker();
+    });
+</script>
