--- a/TaskScheduler/Views/Projects/Index.cshtml
+++ b/TaskScheduler/Views/Projects/Index.cshtml
@@ -24,6 +24,9 @@
             @Html.DisplayNameFor(model => model.endDate)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.projectDesc)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.status)
         </th>
         <th></th>
@@ -42,6 +45,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.endDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.projectDesc)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.status)
