Adding security features to the projects view and adding appropriate warning messages for users for false actions

--- a/TaskScheduler/Views/Account/ErrorLogin.cshtml
+++ b/TaskScheduler/Views/Account/ErrorLogin.cshtml
@@ -7,6 +7,7 @@
 
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.ErrorMessage</h3>
+<h3 style="color:#ff0000;">User does not have Manager role. Please login as a Manager.</h3>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
