--- a/TaskScheduler/Views/Projects/Create.cshtml
+++ b/TaskScheduler/Views/Projects/Create.cshtml
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.assignedTo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.assignedTo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.assignedTo, new SelectList(@ViewBag.empNames) ,  new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.assignedTo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.projectDesc, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.projectDesc, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.projectDesc, new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.projectDesc, "", new { @class = "text-danger" })
             </div>
         </div>
