--- a/TaskScheduler/Views/Projects/Edit.cshtml
+++ b/TaskScheduler/Views/Projects/Edit.cshtml
@@ -26,7 +26,7 @@
                     }
                     else
                     {
-                        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly" } })
                     }
                 }
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -39,11 +39,11 @@
                 @{
                     if (ViewBag.Role == "Manager")
                     {
-                        @Html.EditorFor(model => model.assignedTo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.DropDownListFor(model => model.assignedTo, new SelectList(@ViewBag.empNames), new { @class = "form-control" })
                     }
                     else
                     {
-                        @Html.EditorFor(model => model.assignedTo, new { htmlAttributes = new { @class = "form-control" , @readOnly = "readOnly", @disabled = "disabled" } })
+                        @Html.EditorFor(model => model.assignedTo, new { htmlAttributes = new { @class = "form-control" , @readOnly = "readOnly" } })
                     }
                 }
                 @Html.ValidationMessageFor(model => model.assignedTo, "", new { @class = "text-danger" })
@@ -60,7 +60,7 @@
                     } 
                     else
                     {
-                        @Html.EditorFor(model => model.startDate, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                        @Html.EditorFor(model => model.startDate, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly"} })
                     }
                 }
                 @Html.ValidationMessageFor(model => model.startDate, "", new { @class = "text-danger" })
@@ -77,7 +77,7 @@
                     }
                     else
                     {
-                        @Html.EditorFor(model => model.endDate, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                        @Html.EditorFor(model => model.endDate, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly"} })
                     }
                 }
                 
@@ -91,11 +91,11 @@
                 @{
                     if (ViewBag.Role == "Manager")
                     {
-                        @Html.EditorFor(model => model.projectDesc, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextAreaFor(model => model.projectDesc,  new { @class = "form-control" } )
                     }
                     else
                     {
-                        @Html.EditorFor(model => model.projectDesc, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly", @disabled = "disabled" } })
+                        @Html.TextAreaFor(model => model.projectDesc,  new { @class = "form-control", @readOnly = "readOnly" } )
                     }
                 }
 
